added endpoint for configuration
